# LunaBlue

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  PHASE-3-1-IMPLEMENTATION.md  QUICK_REFERENCE.md  README.md  Research.docx  docker-compose.yml  install-llama.ps1  install.bat  install.sh  package-lock.json  package.json  pytest.ini  requirements-python.txt  requirements.txt  tsconfig.json
Components/: API.md  AUDIT.md  WEB.md
DoNoHarm/: README.md  guidelines.md  values.md
Steps/: Step02-BackendSkeleton.md  Step08-EndToEndLoop.md  Step12-FrontendBuildIntegration.md  Step16-TestSuites.md
backend/: README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  config.py  main.py  startup.py
backend/app/api/: errors.py  websocket.py
backend/app/api/routes/: __init__.py  agents.py  debug.py  health.py  identity.py  prompt.py  search.py  state.py
backend/app/api/schemas/: agent.py  identity.py  prompt.py  search.py  state.py
backend/app/audit/: db.py  embeddings_backfill.py  models.py  redaction.py  retention.py  service.py  vectors.py
backend/app/governance/: intake.py  policy.py
backend/app/llm/: __init__.py  embedding.py  native.py  runtime.py
backend/app/llm/prompts/: __init__.py  enhance.md  research_decompose.md  research_investigate.md  research_summarize.md  review.md  summarize_session.md  system.md
backend/app/orchestration/: graph.py  indexer.py  pipeline.py  runner.py  summarizer.py
backend/app/orchestration/agents/: __init__.py  base.py  research.py
backend/app/orchestration/nodes/: agent_spawn.py  llm_review.py  prompt_engineering.py  prompt_enhancement.py  respond.py
backend/app/state/: events.py  identity.py  store.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_audit_schema.py  0002_prompt_embeddings.py
backend/tests/: fakes.py  test_agent_runner.py  test_audit_service.py  test_llm_runtime.py  test_main_graph.py  test_prompt_api.py  test_state_api.py  test_state_events.py  test_state_store.py  test_websocket.py
config/: app.config.json  models.config.json
data/: lunablue.db-shm  lunablue.db-wal
docs/: API.md  ARCHITECTURE.md  Architecture.md  BuildPlan.md  CONFIG.md  DataRetention.md  README.md  SETUP.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts  vitest.config.ts
models/: MODEL_METADATA_TEMPLATE.json  README.md
scripts/: backfill_embeddings.ps1  backfill_embeddings.sh  build_frontend.ps1  build_frontend.sh  download-model.cjs  download-model.js  download-models.py  download_embedding_model.ps1  migrate.ps1  (+9 more)
(+110 files in other folders)
