[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lunablue-backend"
version = "0.1.0"
description = "LunaBlue backend — FastAPI service hosting the UI, APIs, LangGraph orchestration, and the local LLM."
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "sqlalchemy>=2.0",
    "asyncpg",
    "alembic",
    "greenlet",
    "llama-cpp-python",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["llm/prompts/*.md"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
